# keba_home_api

./: .gitignore  AGENTS.md  API.md  BACKLOG.md  Cargo.toml  README.md  ROADMAP.md  RUNBOOK.md  Setup_keba_connection.md  TODOS.md  setup.md
.github/workflows/: ci.yml
deploy/caddy/: keba-home-api.Caddyfile.example
deploy/systemd/: keba-db-backup.env.example  keba-db-backup.service  keba-db-backup.timer  keba-home-api-reader.env.example  keba-home-api-reader.service  keba-home-api.env.example  keba-home-api.service  keba-home-service-carport.env.example  keba-home-service-eingang.env.example  keba-home-service@.service
keba-api/: Cargo.toml
keba-api/src/: main.rs
keba-service/: Cargo.toml
keba-service/src/: main.rs
output/: results.json
scripts/: backup_keba_db.sh  cleanup_all.sh  create_test_db.ps1  debug_wallbox_call.ps1  kebaModbusDiagnostics.ps1  post_deploy_check.sh  restart_services.sh  setup_all.sh  start_all_services.sh  write_pi_api_env.sh
src/: lib.rs  main.rs  test_support.rs
src/adapters/: api.rs  dachs_http.rs  db.rs  keba_debug_file.rs  keba_modbus.rs  keba_udp.rs  mod.rs
src/app/: config.rs  error.rs  logging.rs  mod.rs  runtime.rs  services.rs
src/domain/: keba_payload.rs  mod.rs  models.rs  session_energy.rs  session_state.rs
testdata/debug/: aborted_report3_fetch_on_unplugged.json  flap_end_single_session.json  flap_start_no_session.json  happy_loop.json  intermittent_wallbox_errors.json  invalid_energy_source_switch.json  invalid_json_error.json  missing_sequences.json  multi_sessions_clean.json  network_failures.json  (+4 more)
